--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,4 @@
 @import 'media_queries';
-
 $columnNo: 12;
 $gutter: 20px;
 
@@ -57,7 +56,10 @@ $gutter: 20px;
 body {
 	font-family: 'Open Sans', serif;
   font-size: 16px;
-	background-color: #ECECEC;
+	background-color: #f1efed;
+}
+.container {
+	padding: 10px;
 }
 // HEADER //
 .headerBox {
@@ -73,10 +75,12 @@ body {
 }
 h1 {
   font-size: 62.48px;
+	color: #035159;
   margin-bottom: 45px;
 }
 .headerTitle {
   font-weight: 200;
+	color: #035159;
   font-size: 42.33px;
 }
 //circle
@@ -95,6 +99,7 @@ h1 {
   margin-top: 78px;
   p {
     margin-bottom: 10px;
+		color: #a5a4a3;
   }
 }
 .iconBox {
@@ -106,12 +111,86 @@ h1 {
     height: 23px;
   }
 }
-
 hr {
   display: block;
   width: 91% !important;
   margin-left: 40px;
   margin-top: 14px;
+	margin-bottom: 59px;
+}
+
+// SECTION FORMATIONS //
+.timeLine {
+	h2 {
+		display: inline;
+		font-size: 44.34px;
+		color: #035159;
+	}
+}
+
+.formTop {
+	margin-top: 48px;
+}
+.textTop {
+	display: inline;
+	float: left;
+	padding-left: 25px;
+	p {
+		text-align: center;
+		padding: 1%;
+		color:  #48acac;
+	}
+	.greenBox {
+		color: white;
+		background-color: #48acac;
+		border-radius: 10px;
+	}
+}
+//border
+.borderLine {
+	margin: 0;
+	border-top: 7px solid #035159;
+	margin-top: 22px;
+	margin-left: 8%;
+	margin-bottom: 8px;
+	width: 79%;
+}
+
+.borderLine  {
+	p {
+		margin: 0;
+		width: 23px;
+		height: 23px;
+		background-color: white;
+		border: 4px solid #035159;
+		border-radius: 50%;
+		margin-top: -7%;
+	}
+	.pointTwo {
+		margin-left: 30%;
+	}
+	.pointThree  {
+		margin-left: 50%;
+	}
+	.pointFour {
+		float: right;
+	}
+}
+//month
+.formMiddle {
+	margin-top: 0;
+	.textPadding {
+		padding-left: 34px;
+	}
+}
+.textBottom {
+	padding-left: 0 !important;
+}
+.bottomPadding {
+	padding-left: 20px;
+}
+.bottomPaddingP {
+	padding-left: 27px;
 }
 .stageBox {
   border-radius: 10px;
