--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,7 +30,7 @@ $gutter: 20px;
 	@for $i from 1 through $columnNo {
 		.col-lg-#{$i} {
 			width: 100/$columnNo * $i + %;
-      //border: 1px solid yellow;
+    //  border: 1px solid yellow;
     }
   }
 }
@@ -120,13 +120,11 @@ hr {
 }
 
 // SECTION FORMATIONS //
-.timeLine {
 	h2 {
 		display: inline;
 		font-size: 44.34px;
 		color: #035159;
 	}
-}
 
 .formTop {
 	margin-top: 48px;
@@ -151,9 +149,9 @@ hr {
 	margin: 0;
 	border-top: 7px solid #035159;
 	margin-top: 22px;
-	margin-left: 8%;
+	margin-left: 3.5%;
 	margin-bottom: 8px;
-	width: 79%;
+	width: 86%;
 }
 
 .borderLine  {
@@ -164,23 +162,25 @@ hr {
 		background-color: white;
 		border: 4px solid #035159;
 		border-radius: 50%;
-		margin-top: -7%;
+		margin-top: -6%;
+		margin-left: -1%;
 	}
 	.pointTwo {
-		margin-left: 30%;
+		margin-left: 35%;
 	}
 	.pointThree  {
-		margin-left: 50%;
+		margin-left: 52%;
 	}
 	.pointFour {
 		float: right;
+		margin-right: -3%;
 	}
 }
 //month
 .formMiddle {
 	margin-top: 0;
 	.textPadding {
-		padding-left: 34px;
+		padding-left: 15px;
 	}
 }
 .textBottom {
@@ -192,74 +192,182 @@ hr {
 .bottomPaddingP {
 	padding-left: 27px;
 }
+//stage
+.experienceBox {
+	margin-top: 8%;
+}
+
 .stageBox {
   border-radius: 10px;
   background-color: white;
   padding: 2%;
+	padding-right: 0;
+	padding-top: 28px;
+	padding-bottom: 18px;
   box-shadow: 1px 1px 2px silver;
+	margin-top: 56px;
+	margin-bottom: 79px;
+	h4 {
+		font-size: 24.19px;
+		font-weight: 200;
+	}
+	p {
+		font-size: 19px;
+		font-weight: 200;
+		color: #999794;
+	}
+	span:first-child {
+		font-size: 20.16px;
+		font-weight: 200;
+		color: #bababa;
+	}
+	span:last-child {
+		font-size: 52.41px;
+		font-weight: 200;
+		color: #035159;
+	}
+}
+.stageBorder {
+	border-right: 3px solid #bababa;
+}
+.yearBox {
+	padding-left: 20px;
+}
+.yearText {
+	padding-top: 10%;
+	text-align: center;
+}
+.yearBoxEx {
+	padding-right: 20px;
+}
+.stageBoxMargin{
+	margin-top: 25%;
 }
 .borderRight {
-  border-right: 2px solid black;
-
+  border-right: 6px solid #084141;
 }
 .triangle {
 	width: 0;
 	height: 0;
-	border-top: 7px solid transparent;
-	border-bottom: 7px solid transparent;
-	border-left: 12px solid white;
-	margin: 32px auto 0;
+	border-top: 20px solid transparent;
+	border-bottom: 20px solid transparent;
+	border-left: 35px solid white;
+	margin: 21% auto 0;
 }
 .triangleRight {
 	width: 0;
 	height: 0;
-	border-top: 7px solid transparent;
-	border-bottom: 7px solid transparent;
-	border-right: 12px solid white;
-	margin: 32px auto 0 5%;
+	border-top: 20px solid transparent;
+	border-bottom: 20px solid transparent;
+	border-right: 35px solid white;
+	margin: 46% auto 0 ;
 }
+//competences
+.competencesBox {
+	margin-top: 80px;
+}
+.competencesList {
+	margin-top: 9%;
+	font-size: 24.16px;
+	p{
+		padding-bottom: 7%;
+	}
+
+}
+
 .marginTop {
-  margin-top: 1%;
+  margin-top: 10.5%;
 }
 .prog {
-height: 8px;
+height: 13px;
 border: 1px solid #ccc;
 background: #eee;
 border-radius: 5px;
-margin-bottom: 3.5%;
+margin-bottom: 8%;
 }
 
-.prog .progBar {
+.one {
+	background: #027070;
+}
+.two {
+	background: #046060;
+}
+.three {
+	background: #074c4c;
+}
+.four {
+	background: #009898;
+}
+.five {
+	background: #02b4b5;
+}
+.six {
+	background: #008384;
+}
+.progBar {
 border-radius: 3px;
-background: #444;
-height: 6px;
+
+height: 11px;
+margin-left: 0;
+
 }
 .circlesBox {
   display: flex;
 }
 .sport {
-  width: 100px;
-  height: 100px;
-  background-color: silver;
+  width: 148px;
+  height: 148px;
+  background-color: #26acac;
   border-radius: 50%;
+	opacity: 0.8;
+	margin-top: 62px;
+	margin-left: 7%;
+	z-index: 3;
+	position: absolute;
+	color: white;
+	font-size: 32.21px;
+	line-height: 148px;
 }
 .musique {
-  width: 100px;
-  height: 100px;
-  background-color: silver;
+  width: 170px;
+  height: 170px;
+  background-color: #2bc4c4;
   border-radius: 50%;
+	z-index: 1;
+	position: absolute;
+	margin-top: 174px;
+	margin-left: 3%;
+	color: white;
+	font-size: 27.61px;
+	line-height: 170px;
 }
 .webdesign {
-  width: 100px;
-  height: 100px;
-  background-color: silver;
+  width: 236px;
+  height: 236px;
+  background-color: #268e8e;
   border-radius: 50%;
+	position: absolute;
+	z-index: 2;
+	opacity: 0.8;
+	margin-top: 97px;
+	margin-left: 15%;
+	color: white;
+	font-size: 36.81px;
+	line-height: 236px;
 }
 .cinema {
-  width: 100px;
-  height: 100px;
-  background-color: silver;
+  width: 144px;
+  height: 144px;
+  background-color: #2b5d5d;
   border-radius: 50%;
+	position: absolute;
+	z-index: 4;
+	opacity: 0.8;
+	margin-top: 241px;
+	margin-left: 30%;
+	color: white;
+	font-size: 29.13px;
+	line-height: 144px;
 }
 .center {
   text-align: center;
