--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,20 +1,23 @@
 @import 'media_queries';
 $columnNo: 12;
-$gutter: 20px;
+$gutter: 1.25em;
 
 
 /* ------ GRID ------ */
 @for $i from 1 through $columnNo {
 	.col-xsm-#{$i} {
 		width: 100/$columnNo * $i + %;
-    border: 1px solid red;
+    //border: 1px solid red;
+		font-size: 9px;
 	}
 }
 @include phone {
 	@for $i from 1 through $columnNo {
 		.col-sm-#{$i} {
 			width: 100/$columnNo * $i + %;
-      border: 1px solid green;
+      //border: 1px solid green;
+			font-size: 11px;
+
     }
   }
 }
@@ -22,7 +25,14 @@ $gutter: 20px;
 	@for $i from 1 through $columnNo {
 		.col-md-#{$i} {
 			width: 100/$columnNo * $i + %;
-      border: 1px solid blue;
+//    border: 1px solid blue;
+		font-size: 13px;
+		.adressBox {
+			p {
+				padding-right: 3%;
+			}
+		}
+
     }
   }
 }
@@ -31,6 +41,7 @@ $gutter: 20px;
 		.col-lg-#{$i} {
 			width: 100/$columnNo * $i + %;
     //  border: 1px solid yellow;
+		font-size: 16px;
     }
   }
 }
@@ -55,17 +66,19 @@ $gutter: 20px;
 }
 body {
 	font-family: 'Open Sans', serif;
-  font-size: 16px;
+  font-size: 8px;
 	background-color: #f1efed;
 }
 .container {
 	padding: 10px;
+	width: 100%;
+	max-width: 1200px;
 }
 // HEADER //
 .headerBox {
-  margin-top: 52px;
-  font-size: 24.19px;
-  padding-left: 19px;
+  margin-top: 3.25em;
+  font-size: 1.5em;
+  padding-left: 1.188em;
 }
 .floatLeft {
   float: left;
@@ -73,94 +86,100 @@ body {
 .floatRight {
   float: right;
 }
-h1 {
-  font-size: 62.48px;
+.name {
+  font-size: 3.905em;
 	color: #035159;
-  margin-bottom: 45px;
+  margin-bottom: 0.5em;
+	font-weight: bold;
 }
 .headerTitle {
-  font-weight: 200;
+	font-size: 2.2em;
 	color: #035159;
-  font-size: 42.33px;
+	font-weight: lighter;
 }
 //circle
 .circleBox {
-  margin-top: 72px;
+  margin-top: 4.5em;
 }
 .circle {
-  width: 213px;
-  height: 213px;
+  width: 13.3em;
+  height: 13.3em;
   background-color: #bebcbb;
   border-radius: 50%;
 }
 //adress
 .adressBox {
   text-align: right;
-  margin-top: 78px;
+  margin-top: 4.875em;
   p {
-    margin-bottom: 10px;
+    margin-bottom: 0.625em;
 		color: #a5a4a3;
+		font-size: 1.5em;
   }
 }
 .iconBox {
-  margin-top: 82px;
+  margin-top: 5.1em;
   text-align: right;
   img {
-    margin-bottom: 20px;
+    margin-bottom: 1.6em;
     display: block;
-    height: 23px;
+    height: 1.4375em;
   }
 }
 hr {
   display: block;
   width: 91% !important;
-  margin-left: 40px;
-  margin-top: 14px;
-	margin-bottom: 59px;
+  margin-left: 2.5em;
+  margin-top: 0.875em;
+	margin-bottom: 3.688em;
 }
 
 // SECTION FORMATIONS //
 	h2 {
 		display: inline;
-		font-size: 44.34px;
+		font-size: 2.77125em;
 		color: #035159;
 	}
 
 .formTop {
-	margin-top: 48px;
+	margin-top: 3em;
 }
 .textTop {
 	display: inline;
 	float: left;
-	padding-left: 25px;
+	padding-left: 1.5625em;
 	p {
 		text-align: center;
 		padding: 1%;
 		color:  #48acac;
 	}
+
 	.greenBox {
 		color: white;
 		background-color: #48acac;
-		border-radius: 10px;
+		border-radius: 0.625em;
 	}
+}
+.textLeft {
+	text-align: left !important;
 }
 //border
 .borderLine {
 	margin: 0;
-	border-top: 7px solid #035159;
-	margin-top: 22px;
+	border-top: 0.4375em solid #035159;
+	margin-top: 1.375em;
 	margin-left: 3.5%;
-	margin-bottom: 8px;
+	margin-bottom: 0.5em;
 	width: 86%;
 }
 
 .borderLine  {
 	p {
 		margin: 0;
-		width: 23px;
-		height: 23px;
+		width: 1.4375em;
+		height: 1.4375em;
 		background-color: white;
-		border: 4px solid #035159;
+		border: 0.25em solid #035159;
 		border-radius: 50%;
 		margin-top: -6%;
 		margin-left: -1%;
@@ -180,17 +199,17 @@ hr {
 .formMiddle {
 	margin-top: 0;
 	.textPadding {
-		padding-left: 15px;
+		padding-left: 0.9375em;
 	}
 }
 .textBottom {
 	padding-left: 0 !important;
 }
 .bottomPadding {
-	padding-left: 20px;
+	padding-left: 1.25em;
 }
 .bottomPaddingP {
-	padding-left: 27px;
+	padding-left: 1.6875em;
 }
 //stage
 .experienceBox {
@@ -198,94 +217,90 @@ hr {
 }
 
 .stageBox {
-  border-radius: 10px;
+  border-radius: 0.625em;
   background-color: white;
   padding: 2%;
 	padding-right: 0;
-	padding-top: 28px;
-	padding-bottom: 18px;
-  box-shadow: 1px 1px 2px silver;
-	margin-top: 56px;
-	margin-bottom: 79px;
+	padding-top: 1.75em;
+	padding-bottom: 1.125em;
+  box-shadow: 0.0625em 0.0625em 0.125em silver;
+	margin-top: 3.5em;
+	margin-bottom: 4.9375em;
 	h4 {
-		font-size: 24.19px;
+		font-size: 1.511875em;
 		font-weight: 200;
 	}
 	p {
-		font-size: 19px;
+		font-size: 1.1875em;
 		font-weight: 200;
 		color: #999794;
+		padding-right: 2%;
 	}
 	span:first-child {
-		font-size: 20.16px;
+		font-size: 1.26em;
 		font-weight: 200;
 		color: #bababa;
 	}
 	span:last-child {
-		font-size: 52.41px;
+		font-size: 3.275625em;
 		font-weight: 200;
 		color: #035159;
 	}
 }
 .stageBorder {
-	border-right: 3px solid #bababa;
+	border-right: 0.1875em solid #bababa;
 }
-.yearBox {
-	padding-left: 20px;
-}
+
 .yearText {
 	padding-top: 10%;
 	text-align: center;
 }
 .yearBoxEx {
-	padding-right: 20px;
+	padding-right: 1.25em;
 }
 .stageBoxMargin{
-	margin-top: 25%;
+	margin-top: 9em;
 }
 .borderRight {
-  border-right: 6px solid #084141;
+  border-right: 0.375em solid #084141;
 }
 .triangle {
 	width: 0;
 	height: 0;
-	border-top: 20px solid transparent;
-	border-bottom: 20px solid transparent;
-	border-left: 35px solid white;
-	margin: 21% auto 0;
+	border-top: 1.25em solid transparent;
+	border-bottom: 1.25em solid transparent;
+	border-left: 2.1875em solid white;
+	margin: 7em auto 0;
 }
 .triangleRight {
 	width: 0;
 	height: 0;
-	border-top: 20px solid transparent;
-	border-bottom: 20px solid transparent;
-	border-right: 35px solid white;
-	margin: 46% auto 0 ;
+	border-top: 1.25em solid transparent;
+	border-bottom: 1.25em solid transparent;
+	border-right: 2.1875em solid white;
+	margin: 16.5em auto 0 ;
 }
 //competences
 .competencesBox {
-	margin-top: 80px;
+	margin-top: 5em;
 }
 .competencesList {
 	margin-top: 9%;
-	font-size: 24.16px;
+	font-size: 1.31em;
 	p{
 		padding-bottom: 7%;
 	}
-
 }
-
 .marginTop {
   margin-top: 10.5%;
 }
 .prog {
-height: 13px;
-border: 1px solid #ccc;
-background: #eee;
-border-radius: 5px;
-margin-bottom: 8%;
+	height: 0.8125em;
+	border: 0.0625em solid #ccc;
+	background: #eee;
+	border-radius: 0.3125em;
+	margin-bottom: 1.5em;
 }
-
 .one {
 	background: #027070;
 }
@@ -305,9 +320,9 @@ margin-bottom: 8%;
 	background: #008384;
 }
 .progBar {
-border-radius: 3px;
+border-radius: 0.1875em;
 
-height: 11px;
+height: 0.6875em;
 margin-left: 0;
 
 }
@@ -315,59 +330,59 @@ margin-left: 0;
   display: flex;
 }
 .sport {
-  width: 148px;
-  height: 148px;
+  width: 4.7em;
+  height: 4.7em;
   background-color: #26acac;
   border-radius: 50%;
 	opacity: 0.8;
-	margin-top: 62px;
+	margin-top: 1.875em;
 	margin-left: 7%;
 	z-index: 3;
 	position: absolute;
 	color: white;
-	font-size: 32.21px;
-	line-height: 148px;
+	font-size: 2.013125em;
+	line-height: 4.7em;
 }
 .musique {
-  width: 170px;
-  height: 170px;
+  width: 6.3em;
+  height: 6.3em;
   background-color: #2bc4c4;
   border-radius: 50%;
 	z-index: 1;
 	position: absolute;
-	margin-top: 174px;
+	margin-top: 6.4em;
 	margin-left: 3%;
 	color: white;
-	font-size: 27.61px;
-	line-height: 170px;
+	font-size: 1.725625em;
+	line-height: 6.3em;
 }
 .webdesign {
-  width: 236px;
-  height: 236px;
+  width: 6.4em;
+  height: 6.4em;
   background-color: #268e8e;
   border-radius: 50%;
 	position: absolute;
 	z-index: 2;
 	opacity: 0.8;
-	margin-top: 97px;
+	margin-top: 3.0625em;
 	margin-left: 15%;
 	color: white;
-	font-size: 36.81px;
-	line-height: 236px;
+	font-size: 2.300625em;
+	line-height: 6.4em;
 }
 .cinema {
-  width: 144px;
-  height: 144px;
+  width: 5em;
+  height: 5em;
   background-color: #2b5d5d;
   border-radius: 50%;
 	position: absolute;
 	z-index: 4;
 	opacity: 0.8;
-	margin-top: 241px;
+	margin-top: 8.0625em;
 	margin-left: 30%;
 	color: white;
-	font-size: 29.13px;
-	line-height: 144px;
+	font-size: 1.820625em;
+	line-height: 5em;
 }
 .center {
   text-align: center;
