--- a/css/style.css
+++ b/css/style.css
@@ -1,153 +1,189 @@
 /* ------ GRID ------ */
 .col-xsm-1 {
   width: 8.33333%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-2 {
   width: 16.66667%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-3 {
   width: 25%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-4 {
   width: 33.33333%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-5 {
   width: 41.66667%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-6 {
   width: 50%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-7 {
   width: 58.33333%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-8 {
   width: 66.66667%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-9 {
   width: 75%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-10 {
   width: 83.33333%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-11 {
   width: 91.66667%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 .col-xsm-12 {
   width: 100%;
-  border: 1px solid red; }
+  font-size: 9px; }
 
 @media (min-width: 640px) {
   .col-sm-1 {
     width: 8.33333%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-2 {
     width: 16.66667%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-3 {
     width: 25%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-4 {
     width: 33.33333%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-5 {
     width: 41.66667%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-6 {
     width: 50%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-7 {
     width: 58.33333%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-8 {
     width: 66.66667%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-9 {
     width: 75%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-10 {
     width: 83.33333%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-11 {
     width: 91.66667%;
-    border: 1px solid green; }
+    font-size: 11px; }
   .col-sm-12 {
     width: 100%;
-    border: 1px solid green; } }
+    font-size: 11px; } }
 
 @media (min-width: 768px) {
   .col-md-1 {
     width: 8.33333%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-1 .adressBox p {
+      padding-right: 3%; }
   .col-md-2 {
     width: 16.66667%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-2 .adressBox p {
+      padding-right: 3%; }
   .col-md-3 {
     width: 25%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-3 .adressBox p {
+      padding-right: 3%; }
   .col-md-4 {
     width: 33.33333%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-4 .adressBox p {
+      padding-right: 3%; }
   .col-md-5 {
     width: 41.66667%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-5 .adressBox p {
+      padding-right: 3%; }
   .col-md-6 {
     width: 50%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-6 .adressBox p {
+      padding-right: 3%; }
   .col-md-7 {
     width: 58.33333%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-7 .adressBox p {
+      padding-right: 3%; }
   .col-md-8 {
     width: 66.66667%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-8 .adressBox p {
+      padding-right: 3%; }
   .col-md-9 {
     width: 75%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-9 .adressBox p {
+      padding-right: 3%; }
   .col-md-10 {
     width: 83.33333%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-10 .adressBox p {
+      padding-right: 3%; }
   .col-md-11 {
     width: 91.66667%;
-    border: 1px solid blue; }
+    font-size: 13px; }
+    .col-md-11 .adressBox p {
+      padding-right: 3%; }
   .col-md-12 {
     width: 100%;
-    border: 1px solid blue; } }
+    font-size: 13px; }
+    .col-md-12 .adressBox p {
+      padding-right: 3%; } }
 
-@media (min-width: 1098px) {
+@media (min-width: 1024px) {
   .col-lg-1 {
-    width: 8.33333%; }
+    width: 8.33333%;
+    font-size: 16px; }
   .col-lg-2 {
-    width: 16.66667%; }
+    width: 16.66667%;
+    font-size: 16px; }
   .col-lg-3 {
-    width: 25%; }
+    width: 25%;
+    font-size: 16px; }
   .col-lg-4 {
-    width: 33.33333%; }
+    width: 33.33333%;
+    font-size: 16px; }
   .col-lg-5 {
-    width: 41.66667%; }
+    width: 41.66667%;
+    font-size: 16px; }
   .col-lg-6 {
-    width: 50%; }
+    width: 50%;
+    font-size: 16px; }
   .col-lg-7 {
-    width: 58.33333%; }
+    width: 58.33333%;
+    font-size: 16px; }
   .col-lg-8 {
-    width: 66.66667%; }
+    width: 66.66667%;
+    font-size: 16px; }
   .col-lg-9 {
-    width: 75%; }
+    width: 75%;
+    font-size: 16px; }
   .col-lg-10 {
-    width: 83.33333%; }
+    width: 83.33333%;
+    font-size: 16px; }
   .col-lg-11 {
-    width: 91.66667%; }
+    width: 91.66667%;
+    font-size: 16px; }
   .col-lg-12 {
-    width: 100%; } }
+    width: 100%;
+    font-size: 16px; } }
 
 .row:before,
 .row:after {
@@ -168,16 +204,18 @@
 
 body {
   font-family: 'Open Sans', serif;
-  font-size: 16px;
+  font-size: 8px;
   background-color: #f1efed; }
 
 .container {
-  padding: 10px; }
+  padding: 10px;
+  width: 100%;
+  max-width: 1200px; }
 
 .headerBox {
-  margin-top: 52px;
-  font-size: 24.19px;
-  padding-left: 19px; }
+  margin-top: 3.25em;
+  font-size: 1.5em;
+  padding-left: 1.188em; }
 
 .floatLeft {
   float: left; }
@@ -185,59 +223,61 @@ body {
 .floatRight {
   float: right; }
 
-h1 {
-  font-size: 62.48px;
+.name {
+  font-size: 3.905em;
   color: #035159;
-  margin-bottom: 45px; }
+  margin-bottom: 0.5em;
+  font-weight: bold; }
 
 .headerTitle {
-  font-weight: 200;
+  font-size: 2.2em;
   color: #035159;
-  font-size: 42.33px; }
+  font-weight: lighter; }
 
 .circleBox {
-  margin-top: 72px; }
+  margin-top: 4.5em; }
 
 .circle {
-  width: 213px;
-  height: 213px;
+  width: 13.3em;
+  height: 13.3em;
   background-color: #bebcbb;
   border-radius: 50%; }
 
 .adressBox {
   text-align: right;
-  margin-top: 78px; }
+  margin-top: 4.875em; }
   .adressBox p {
-    margin-bottom: 10px;
-    color: #a5a4a3; }
+    margin-bottom: 0.625em;
+    color: #a5a4a3;
+    font-size: 1.5em; }
 
 .iconBox {
-  margin-top: 82px;
+  margin-top: 5.1em;
   text-align: right; }
   .iconBox img {
-    margin-bottom: 20px;
+    margin-bottom: 1.6em;
     display: block;
-    height: 23px; }
+    height: 1.4375em; }
 
 hr {
   display: block;
   width: 91% !important;
-  margin-left: 40px;
-  margin-top: 14px;
-  margin-bottom: 59px; }
+  margin-left: 2.5em;
+  margin-top: 0.875em;
+  margin-bottom: 3.688em; }
 
 h2 {
   display: inline;
-  font-size: 44.34px;
+  font-size: 2.77125em;
   color: #035159; }
 
 .formTop {
-  margin-top: 48px; }
+  margin-top: 3em; }
 
 .textTop {
   display: inline;
   float: left;
-  padding-left: 25px; }
+  padding-left: 1.5625em; }
   .textTop p {
     text-align: center;
     padding: 1%;
@@ -245,22 +285,25 @@ h2 {
   .textTop .greenBox {
     color: white;
     background-color: #48acac;
-    border-radius: 10px; }
+    border-radius: 0.625em; }
+
+.textLeft {
+  text-align: left !important; }
 
 .borderLine {
   margin: 0;
-  border-top: 7px solid #035159;
-  margin-top: 22px;
+  border-top: 0.4375em solid #035159;
+  margin-top: 1.375em;
   margin-left: 3.5%;
-  margin-bottom: 8px;
+  margin-bottom: 0.5em;
   width: 86%; }
 
 .borderLine p {
   margin: 0;
-  width: 23px;
-  height: 23px;
+  width: 1.4375em;
+  height: 1.4375em;
   background-color: white;
-  border: 4px solid #035159;
+  border: 0.25em solid #035159;
   border-radius: 50%;
   margin-top: -6%;
   margin-left: -1%; }
@@ -278,87 +321,85 @@ h2 {
 .formMiddle {
   margin-top: 0; }
   .formMiddle .textPadding {
-    padding-left: 15px; }
+    padding-left: 0.9375em; }
 
 .textBottom {
   padding-left: 0 !important; }
 
 .bottomPadding {
-  padding-left: 20px; }
+  padding-left: 1.25em; }
 
 .bottomPaddingP {
-  padding-left: 27px; }
+  padding-left: 1.6875em; }
 
 .experienceBox {
   margin-top: 8%; }
 
 .stageBox {
-  border-radius: 10px;
+  border-radius: 0.625em;
   background-color: white;
   padding: 2%;
   padding-right: 0;
-  padding-top: 28px;
-  padding-bottom: 18px;
-  box-shadow: 1px 1px 2px silver;
-  margin-top: 56px;
-  margin-bottom: 79px; }
+  padding-top: 1.75em;
+  padding-bottom: 1.125em;
+  box-shadow: 0.0625em 0.0625em 0.125em silver;
+  margin-top: 3.5em;
+  margin-bottom: 4.9375em; }
   .stageBox h4 {
-    font-size: 24.19px;
+    font-size: 1.511875em;
     font-weight: 200; }
   .stageBox p {
-    font-size: 19px;
+    font-size: 1.1875em;
     font-weight: 200;
-    color: #999794; }
+    color: #999794;
+    padding-right: 2%; }
   .stageBox span:first-child {
-    font-size: 20.16px;
+    font-size: 1.26em;
     font-weight: 200;
     color: #bababa; }
   .stageBox span:last-child {
-    font-size: 52.41px;
+    font-size: 3.275625em;
     font-weight: 200;
     color: #035159; }
 
 .stageBorder {
-  border-right: 3px solid #bababa; }
-
-.yearBox {
-  padding-left: 20px; }
+  border-right: 0.1875em solid #bababa; }
 
 .yearText {
   padding-top: 10%;
   text-align: center; }
 
 .yearBoxEx {
-  padding-right: 20px; }
+  padding-right: 1.25em; }
 
 .stageBoxMargin {
-  margin-top: 25%; }
+  margin-top: 9em; }
 
 .borderRight {
-  border-right: 6px solid #084141; }
+  border-right: 0.375em solid #084141; }
 
 .triangle {
   width: 0;
   height: 0;
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
-  border-left: 35px solid white;
-  margin: 21% auto 0; }
+  border-top: 1.25em solid transparent;
+  border-bottom: 1.25em solid transparent;
+  border-left: 2.1875em solid white;
+  margin: 7em auto 0; }
 
 .triangleRight {
   width: 0;
   height: 0;
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
-  border-right: 35px solid white;
-  margin: 46% auto 0; }
+  border-top: 1.25em solid transparent;
+  border-bottom: 1.25em solid transparent;
+  border-right: 2.1875em solid white;
+  margin: 16.5em auto 0; }
 
 .competencesBox {
-  margin-top: 80px; }
+  margin-top: 5em; }
 
 .competencesList {
   margin-top: 9%;
-  font-size: 24.16px; }
+  font-size: 1.31em; }
   .competencesList p {
     padding-bottom: 7%; }
 
@@ -366,11 +407,11 @@ h2 {
   margin-top: 10.5%; }
 
 .prog {
-  height: 13px;
-  border: 1px solid #ccc;
+  height: 0.8125em;
+  border: 0.0625em solid #ccc;
   background: #eee;
-  border-radius: 5px;
-  margin-bottom: 8%; }
+  border-radius: 0.3125em;
+  margin-bottom: 1.5em; }
 
 .one {
   background: #027070; }
@@ -391,67 +432,67 @@ h2 {
   background: #008384; }
 
 .progBar {
-  border-radius: 3px;
-  height: 11px;
+  border-radius: 0.1875em;
+  height: 0.6875em;
   margin-left: 0; }
 
 .circlesBox {
   display: flex; }
 
 .sport {
-  width: 148px;
-  height: 148px;
+  width: 4.7em;
+  height: 4.7em;
   background-color: #26acac;
   border-radius: 50%;
   opacity: 0.8;
-  margin-top: 62px;
+  margin-top: 1.875em;
   margin-left: 7%;
   z-index: 3;
   position: absolute;
   color: white;
-  font-size: 32.21px;
-  line-height: 148px; }
+  font-size: 2.013125em;
+  line-height: 4.7em; }
 
 .musique {
-  width: 170px;
-  height: 170px;
+  width: 6.3em;
+  height: 6.3em;
   background-color: #2bc4c4;
   border-radius: 50%;
   z-index: 1;
   position: absolute;
-  margin-top: 174px;
+  margin-top: 6.4em;
   margin-left: 3%;
   color: white;
-  font-size: 27.61px;
-  line-height: 170px; }
+  font-size: 1.725625em;
+  line-height: 6.3em; }
 
 .webdesign {
-  width: 236px;
-  height: 236px;
+  width: 6.4em;
+  height: 6.4em;
   background-color: #268e8e;
   border-radius: 50%;
   position: absolute;
   z-index: 2;
   opacity: 0.8;
-  margin-top: 97px;
+  margin-top: 3.0625em;
   margin-left: 15%;
   color: white;
-  font-size: 36.81px;
-  line-height: 236px; }
+  font-size: 2.300625em;
+  line-height: 6.4em; }
 
 .cinema {
-  width: 144px;
-  height: 144px;
+  width: 5em;
+  height: 5em;
   background-color: #2b5d5d;
   border-radius: 50%;
   position: absolute;
   z-index: 4;
   opacity: 0.8;
-  margin-top: 241px;
+  margin-top: 8.0625em;
   margin-left: 30%;
   color: white;
-  font-size: 29.13px;
-  line-height: 144px; }
+  font-size: 1.820625em;
+  line-height: 5em; }
 
 .center {
   text-align: center; }
