--- a/css/style.css
+++ b/css/style.css
@@ -51,39 +51,63 @@
   .col-sm-1 {
     width: 8.33333%;
     font-size: 11px; }
+    .col-sm-1 .borderLeft {
+      border-left: 0; }
   .col-sm-2 {
     width: 16.66667%;
     font-size: 11px; }
+    .col-sm-2 .borderLeft {
+      border-left: 0; }
   .col-sm-3 {
     width: 25%;
     font-size: 11px; }
+    .col-sm-3 .borderLeft {
+      border-left: 0; }
   .col-sm-4 {
     width: 33.33333%;
     font-size: 11px; }
+    .col-sm-4 .borderLeft {
+      border-left: 0; }
   .col-sm-5 {
     width: 41.66667%;
     font-size: 11px; }
+    .col-sm-5 .borderLeft {
+      border-left: 0; }
   .col-sm-6 {
     width: 50%;
     font-size: 11px; }
+    .col-sm-6 .borderLeft {
+      border-left: 0; }
   .col-sm-7 {
     width: 58.33333%;
     font-size: 11px; }
+    .col-sm-7 .borderLeft {
+      border-left: 0; }
   .col-sm-8 {
     width: 66.66667%;
     font-size: 11px; }
+    .col-sm-8 .borderLeft {
+      border-left: 0; }
   .col-sm-9 {
     width: 75%;
     font-size: 11px; }
+    .col-sm-9 .borderLeft {
+      border-left: 0; }
   .col-sm-10 {
     width: 83.33333%;
     font-size: 11px; }
+    .col-sm-10 .borderLeft {
+      border-left: 0; }
   .col-sm-11 {
     width: 91.66667%;
     font-size: 11px; }
+    .col-sm-11 .borderLeft {
+      border-left: 0; }
   .col-sm-12 {
     width: 100%;
-    font-size: 11px; } }
+    font-size: 11px; }
+    .col-sm-12 .borderLeft {
+      border-left: 0; } }
 
 @media (min-width: 768px) {
   .col-md-1 {
@@ -91,99 +115,147 @@
     font-size: 13px; }
     .col-md-1 .adressBox p {
       padding-right: 3%; }
+    .col-md-1 .borderLeft {
+      border-left: 0; }
   .col-md-2 {
     width: 16.66667%;
     font-size: 13px; }
     .col-md-2 .adressBox p {
       padding-right: 3%; }
+    .col-md-2 .borderLeft {
+      border-left: 0; }
   .col-md-3 {
     width: 25%;
     font-size: 13px; }
     .col-md-3 .adressBox p {
       padding-right: 3%; }
+    .col-md-3 .borderLeft {
+      border-left: 0; }
   .col-md-4 {
     width: 33.33333%;
     font-size: 13px; }
     .col-md-4 .adressBox p {
       padding-right: 3%; }
+    .col-md-4 .borderLeft {
+      border-left: 0; }
   .col-md-5 {
     width: 41.66667%;
     font-size: 13px; }
     .col-md-5 .adressBox p {
       padding-right: 3%; }
+    .col-md-5 .borderLeft {
+      border-left: 0; }
   .col-md-6 {
     width: 50%;
     font-size: 13px; }
     .col-md-6 .adressBox p {
       padding-right: 3%; }
+    .col-md-6 .borderLeft {
+      border-left: 0; }
   .col-md-7 {
     width: 58.33333%;
     font-size: 13px; }
     .col-md-7 .adressBox p {
       padding-right: 3%; }
+    .col-md-7 .borderLeft {
+      border-left: 0; }
   .col-md-8 {
     width: 66.66667%;
     font-size: 13px; }
     .col-md-8 .adressBox p {
       padding-right: 3%; }
+    .col-md-8 .borderLeft {
+      border-left: 0; }
   .col-md-9 {
     width: 75%;
     font-size: 13px; }
     .col-md-9 .adressBox p {
       padding-right: 3%; }
+    .col-md-9 .borderLeft {
+      border-left: 0; }
   .col-md-10 {
     width: 83.33333%;
     font-size: 13px; }
     .col-md-10 .adressBox p {
       padding-right: 3%; }
+    .col-md-10 .borderLeft {
+      border-left: 0; }
   .col-md-11 {
     width: 91.66667%;
     font-size: 13px; }
     .col-md-11 .adressBox p {
       padding-right: 3%; }
+    .col-md-11 .borderLeft {
+      border-left: 0; }
   .col-md-12 {
     width: 100%;
     font-size: 13px; }
     .col-md-12 .adressBox p {
-      padding-right: 3%; } }
+      padding-right: 3%; }
+    .col-md-12 .borderLeft {
+      border-left: 0; } }
 
 @media (min-width: 1024px) {
   .col-lg-1 {
     width: 8.33333%;
     font-size: 16px; }
+    .col-lg-1 .borderLeft {
+      border-left: 0; }
   .col-lg-2 {
     width: 16.66667%;
     font-size: 16px; }
+    .col-lg-2 .borderLeft {
+      border-left: 0; }
   .col-lg-3 {
     width: 25%;
     font-size: 16px; }
+    .col-lg-3 .borderLeft {
+      border-left: 0; }
   .col-lg-4 {
     width: 33.33333%;
     font-size: 16px; }
+    .col-lg-4 .borderLeft {
+      border-left: 0; }
   .col-lg-5 {
     width: 41.66667%;
     font-size: 16px; }
+    .col-lg-5 .borderLeft {
+      border-left: 0; }
   .col-lg-6 {
     width: 50%;
     font-size: 16px; }
+    .col-lg-6 .borderLeft {
+      border-left: 0; }
   .col-lg-7 {
     width: 58.33333%;
     font-size: 16px; }
+    .col-lg-7 .borderLeft {
+      border-left: 0; }
   .col-lg-8 {
     width: 66.66667%;
     font-size: 16px; }
+    .col-lg-8 .borderLeft {
+      border-left: 0; }
   .col-lg-9 {
     width: 75%;
     font-size: 16px; }
+    .col-lg-9 .borderLeft {
+      border-left: 0; }
   .col-lg-10 {
     width: 83.33333%;
     font-size: 16px; }
+    .col-lg-10 .borderLeft {
+      border-left: 0; }
   .col-lg-11 {
     width: 91.66667%;
     font-size: 16px; }
+    .col-lg-11 .borderLeft {
+      border-left: 0; }
   .col-lg-12 {
     width: 100%;
-    font-size: 16px; } }
+    font-size: 16px; }
+    .col-lg-12 .borderLeft {
+      border-left: 0; } }
 
 .row:before,
 .row:after {
@@ -204,13 +276,13 @@
 
 body {
   font-family: 'Open Sans', serif;
-  font-size: 8px;
+  font-size: 7px;
   background-color: #f1efed; }
 
 .container {
   padding: 10px;
   width: 100%;
-  max-width: 1200px; }
+  max-width: 1098px; }
 
 .headerBox {
   margin-top: 3.25em;
@@ -265,6 +337,10 @@ hr {
   margin-left: 2.5em;
   margin-top: 0.875em;
   margin-bottom: 3.688em; }
+
+img {
+  width: 2em;
+  height: 2em; }
 
 h2 {
   display: inline;
@@ -378,6 +454,9 @@ h2 {
 .borderRight {
   border-right: 0.375em solid #084141; }
 
+.borderLeft {
+  border-left: 0.375em solid #084141; }
+
 .triangle {
   width: 0;
   height: 0;
@@ -438,6 +517,8 @@ h2 {
 
 .circlesBox {
   display: flex; }
+  .circlesBox p {
+    text-align: center; }
 
 .sport {
   width: 4.7em;
