--- a/sass/style.scss
+++ b/sass/style.scss
@@ -342,9 +342,7 @@ img {
 }
 .circlesBox {
   display: flex;
-  p {
-		text-align: center;
-	}
+
 }
 .sport {
   width: 4.7em;
@@ -353,7 +351,7 @@ img {
   border-radius: 50%;
 	opacity: 0.8;
 	margin-top: 1.875em;
-	margin-left: 7%;
+	margin-left: 2em;
 	z-index: 3;
 	position: absolute;
 	color: white;
@@ -368,7 +366,7 @@ img {
 	z-index: 1;
 	position: absolute;
 	margin-top: 6.4em;
-	margin-left: 3%;
+	//margin-left: 1em;
 	color: white;
 	font-size: 1.725625em;
 	line-height: 6.3em;
@@ -382,7 +380,7 @@ img {
 	z-index: 2;
 	opacity: 0.8;
 	margin-top: 3.0625em;
-	margin-left: 15%;
+	margin-left: 3.9em;
 	color: white;
 	font-size: 2.300625em;
 	line-height: 6.4em;
@@ -396,7 +394,7 @@ img {
 	z-index: 4;
 	opacity: 0.8;
 	margin-top: 8.0625em;
-	margin-left: 30%;
+	margin-left: 11em;
 	color: white;
 	font-size: 1.820625em;
 	line-height: 5em;
