--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ hr {
   margin-bottom: 3.688em; }
 
 img {
-  width: 2em;
+  width: 1.8em;
   height: 2em; }
 
 h2 {
@@ -516,7 +516,11 @@ h2 {
   margin-left: 0; }
 
 .circlesBox {
-  display: flex; }
+  display: flex;
+  margin-bottom: 2em;
+  margin-top: 3em; }
+  .circlesBox p {
+    float: left; }
 
 .sport {
   width: 4.7em;
@@ -524,10 +528,8 @@ h2 {
   background-color: #26acac;
   border-radius: 50%;
   opacity: 0.8;
-  margin-top: 1.875em;
-  margin-left: 2em;
+  margin-left: 1.7em;
   z-index: 3;
-  position: absolute;
   color: white;
   font-size: 2.013125em;
   line-height: 4.7em; }
@@ -538,8 +540,8 @@ h2 {
   background-color: #2bc4c4;
   border-radius: 50%;
   z-index: 1;
-  position: absolute;
-  margin-top: 6.4em;
+  margin-top: 3.9em;
+  margin-left: -7.3em;
   color: white;
   font-size: 1.725625em;
   line-height: 6.3em; }
@@ -549,11 +551,10 @@ h2 {
   height: 6.4em;
   background-color: #268e8e;
   border-radius: 50%;
-  position: absolute;
   z-index: 2;
   opacity: 0.8;
-  margin-top: 3.0625em;
-  margin-left: 3.9em;
+  margin-top: 1em;
+  margin-left: -1.5em;
   color: white;
   font-size: 2.300625em;
   line-height: 6.4em; }
@@ -563,13 +564,12 @@ h2 {
   height: 5em;
   background-color: #2b5d5d;
   border-radius: 50%;
-  position: absolute;
   z-index: 4;
   opacity: 0.8;
-  margin-top: 8.0625em;
-  margin-left: 11em;
+  margin-top: 6em;
+  margin-left: -2.5em;
   color: white;
-  font-size: 1.820625em;
+  font-size: 1.7em;
   line-height: 5em; }
 
 .center {
